[package]
name = "switchboard-solana"
version = "0.29.71"
edition = "2021"
resolver = "2"
description = "A Rust library to interact with Switchboard accounts."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://switchboard.xyz"
repository = "https://github.com/switchboard-xyz/solana-sdk/tree/main/rust/switchboard-solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_solana"
doctest = false

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "*"
rust_decimal = "^1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
bytemuck = "^1"
